# learn-actix-web-old

AW01_Pengantar_Actix_Web/: Cargo.toml
AW01_Pengantar_Actix_Web/src/: main.rs
AW02_Application_Builder/: Cargo.toml
AW02_Application_Builder/src/: main.rs
AW03_Application_Builder/: Cargo.toml
AW03_Application_Builder/src/: lib.rs  main copy 2.rs  main copy 3.rs  main copy.rs  main.rs
AW04_HttpServer_dan_HTTPS/: Cargo.toml  cert.pem  key.pem
AW04_HttpServer_dan_HTTPS/src/: main.rs
AW05_Extractor/: Cargo.toml  song.json
AW05_Extractor/src/: main copy 2.rs  main copy 3.rs  main copy.rs  main.rs
AW06_Extractor/: Cargo.toml
AW06_Extractor/src/: main.rs
AW07_Handlers/: Cargo.toml
AW07_Handlers/src/: main copy 2.rs  main copy.rs  main.rs
AW08_Error_Handling/: Cargo.toml
AW08_Error_Handling/src/: main copy 2.rs  main copy 3.rs  main copy 4.rs  main copy.rs  main.rs
AW09_Url_Dispatch/: Cargo.toml
AW09_Url_Dispatch/src/: main copy 2.rs  main copy.rs  main.rs
AW10_Url_Dispatch/: Cargo.toml
AW10_Url_Dispatch/src/: main copy 2.rs  main copy 3.rs  main copy 4.rs  main copy 5.rs  main copy.rs  main.rs
AW11_Request/: Cargo.toml
AW11_Request/src/: main copy 2.rs  main copy.rs  main.rs
AW12_Responses/: Cargo.toml
AW12_Responses/src/: main copy 2.rs  main copy 3.rs  main copy.rs  main.rs
AW13_Unit_Testing/: Cargo.toml
AW13_Unit_Testing/src/: main.rs
AW14_Integration_Test/: Cargo.toml
AW14_Integration_Test/src/: lib.rs  main.rs  server.rs
AW14_Integration_Test/tests/: api.rs
AW15_Middleware/: Cargo.toml
AW16_Static_Files/: Cargo.toml
(+7 files in other folders)
