[package]
name = "AW6_Extractor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.4"
actix-web = "4.3.1"
local-ip-address = "0.5.3"
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.103"
