[package]
name = "AW7_Handlers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
futures = "0.3.28"
help = "0.0.0"
serde = { version = "1.0.173", features = ["derive"] }
serde_json = "1.0.103"
